# fastcat

./: .gitignore  CMakeLists.txt  Readme.md
include/: args.h  csv_formatter.h  file_reader.h  pager.h  syntax_highlight.h  theme.h
src/: args.cpp  csv_formatter.cpp  file_reader.cpp  main.cpp  pager.cpp  syntax_highlight.cpp  theme.cpp
